  * When USE_UDEBS_BACKPORTS_FROM is set, generate /etc/udebs-backports-source
    so that the running d-i knows that backports support is requested. This
  * Add support for a new BACKPORTED_SOURCES variable, which can be used
    to specify which binaries should be picked from the backports suite
    (instead of the base suite). Source packages are specified, for
    brevity (hello, linux!).

 -- Andreas B. Mundt <andi@debian.org>  Fri, 22 Jun 2018 17:25:42 +0200

debian-installer (20180610) unstable; urgency=medium

  [ Cyril Brulebois ]
  * Bump Linux kernel ABI from 4.13.0-1 to 4.16.0-2
  * Replace c_rehash with openssl rehash (Closes: #895074). That should only
    affect builds with SSL_CERTS enabled; regular HTTPS support comes from
    ca-certificates anyway.
  * Update Vcs-{Browser,Git} to point to salsa (alioth's replacement).
  * Set Acquire::Languages to none since translations aren't needed.
  * Avoid warnings regarding missing /etc/apt/{apt.conf.d,preferences.d}
    by setting their respective apt config variables to /dev/null.
  * Duplicate Apt::Architecture into Apt::Architectures because of course
    apt has two options, the latter getting foreign architectures if not
    specified, even if the former is.
  * Run fc-cache when /etc/fonts or /usr/share/fonts exist, to avoid
    having to generate UUIDs at runtime, which can be hard because of
    missing entropy (Closes: #898468).
  * Add fontconfig to Build-Depends accordingly.

  [ Paul Tagliamonte ]
  * Add support for the NanoPiNeo

  [ Aurelien Jarno ]
  * Drop the build-depends on libnewt0.52, the library now provides an udeb.

  [ Vagrant Cascadian ]
  * [arm64] Generate u-boot media for pine64_plus:
    - Add Build-Depends on u-boot-sunxi, atf-allwinner, u-boot-tools and
      device-tree-compiler.
    - Add atf-allwinner to Built-Using.
  * [armhf] netboot: Enable grub-efi mini.iso.

  [ John Paul Adrian Glaubitz ]
  * hppa: Use compressed kernel image by default.