@@ -12,8 +12,9 @@ ifeq (${SUITE},UNRELEASED)
 	TRANSSTATUS=
 	BOOTMENU_BEEP=n
 else
-	USE_UDEBS_FROM=buster
-	USE_PROPOSED_UPDATES=0
+	USE_UDEBS_FROM=stretch
+	USE_UDEBS_BACKPORTS_FROM=stretch-backports
+	USE_PROPOSED_UPDATES=1
 	TRANSSTATUS=translation-status
 	BOOTMENU_BEEP=y
 endif
