@@ -32,6 +32,7 @@ debian-installer (20180622) UNRELEASED; urgency=medium
     to specify which binaries should be picked from the backports suite
     (instead of the base suite). Source packages are specified, for
     brevity (hello, linux!).
+  * Build against stretch, using stretch-pu and stretch-backports udebs.
 
  -- Andreas B. Mundt <andi@debian.org>  Fri, 22 Jun 2018 17:25:42 +0200
 
